get one fetch invoice
