# internal/interfaces/http/response/error.go
@@ -1,0 +1,5 @@
+package response
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"invalid request"`
+}
